--- a/galerija.html
+++ b/galerija.html
@@ -38,19 +38,28 @@
                 
         </header>
 
-        <main>
-
-      
-
-            <a href="#box1">Otvori box1</a>
-
-            <div id="box1" class="box1">
-            <p>Ovo je text unutar box1</p>
-            <a href="#">Zatvori</a>
-            </div>
+<main>
 
 
-        </main>
+  <section class="hero-galerija">
+    <div class="hero-galerija-overlay">
+      <h1>Architecture</h1>
+      <div class="galerija-slike">
+        <a href="architecture/1.jpg"><img src="architecture/1.jpg" alt="architecture1"></a>
+        <a href="architecture/2.jpg"><img src="architecture/2.jpg" alt="architecture2"></a>
+        <a href="architecture/3.jpg"><img src="architecture/3.jpg" alt="architecture3"></a>
+        <a href="architecture/4.jpg"><img src="architecture/4.jpg" alt="architecture4"></a>
+        <a href="architecture/5.jpg"><img src="architecture/5.jpg" alt="architecture5"></a>
+        <a href="architecture/6.jpg"><img src="architecture/6.jpg" alt="architecture6"></a>
+        <a href="architecture/7.jpg"><img src="architecture/7.jpg" alt="architecture7"></a>
+        <a href="architecture/8.jpg"><img src="architecture/8.jpg" alt="architecture8"></a>
+      </div>
+    </div>
+  </section>
+
+</main>
+
+
         <footer>
             <section class="footer-wrapper">
                     <div class="footer-container">
