--- a/stranica6.html
+++ b/stranica6.html
@@ -15,7 +15,7 @@
                     
                         <nav>
                             <ul class="nav-links">
-                                <li><a href="pocetna.html">POČETNA</a></li>
+                                <li><a href="index.html">POČETNA</a></li>
                                 <li><a href="galerija.html">GALERIJA</a></li>
                                 <li><a href="stranica3.html">STRANICA3</a></li>
                                 <li><a href="stranica4.html">STRANICA4</a></li>
